--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="aboutme.html">About Me</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li><a href="resume (2).pdf">Resume</a></li>
+            <li><a href="Resume.docx">Resume</a></li>
             <div class="small-screen">
                 <li><a href="https://www.linkedin.com/in/mohammad-khan-241147206/">Linkedin</a></li>
                 <li><a href="https://github.com/MKCodes">Github</a></li>
